Fix overflow navigation on ios

--- a/src/ios/style/nav.less
+++ b/src/ios/style/nav.less
@@ -8,6 +8,7 @@ nav {
   position: fixed;
   z-index: 99;
   background-color: #fff;
+  box-sizing: border-box;
   backface-visibility: hidden;
   border-bottom: 1px solid #cbcbcb;
   align-self: center;
